Fix issue with tooltip displaying offscreen

--- a/app/assets/stylesheets/neighborhood.scss
+++ b/app/assets/stylesheets/neighborhood.scss
@@ -104,6 +104,7 @@
   margin: 0 -10px;
   padding: 10px;
   position: absolute;
+  left: 0;
   top: 100%;
   width: 100%;
   z-index: 1001;
